--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
             <a class="logo link" href=""><span class="logo-first">Web</span><span class="logo-second">Studio</span> </a>
             <ul class="menu list">
                 <li class="menu-item"><a class="menu-link link" href="./index.html">Студия</a></li>
-                <li class="menu-item"><a class="menu-link link" href="./portfolio.html">Портфолио</a></li>
+                <li class="menu-item"><a class="menu-link link main-page" href="./portfolio.html">Портфолио</a></li>
                 <li class="menu-item"><a class="menu-link link" href="">Контакты</a></li>
             </ul>
         </nav>
@@ -43,7 +43,10 @@
         <ul class="list work-pic">
         <li class="work-img">
           <a class="work-img-link link" href="">
-            <img src="./img/our-works/techo-min.png" alt="Изображение выполенной работы" width="370" height="294">
+            <div class="work-img-wrapper">
+              <img src="./img/our-works/techo-min.png" alt="Изображение выполенной работы" width="370" height="294">
+              <p class="work-img-descriprion-overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+            </div>
             <div class="img-wrap">
               <h2 class="work-name">Технокряк</h2>
               <p class="work-descriptions">Веб-сайт</p>
@@ -53,7 +56,10 @@
 
         <li class="work-img">
           <a href="" class="work-img-link link">
-          <img src="./img/our-works/poster-min.png" alt="Изображение выполенной работы" width="370" height="294">
+            <div class="work-img-wrapper">
+              <img src="./img/our-works/poster-min.png" alt="Изображение выполенной работы" width="370" height="294">
+              <p class="work-img-descriprion-overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+            </div>
           <div class="img-wrap">
           <h2 class="work-name">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
           <p class="work-descriptions">Дизайн</p>
@@ -63,7 +69,10 @@
 
         <li class="work-img">
           <a href="" class="work-img-link link">
-          <img src="./img/our-works/restoran-min.png" alt="Изображение выполенной работы" width="370" height="294">
+           <div class="work-img-wrapper">
+            <img src="./img/our-works/restoran-min.png" alt="Изображение выполенной работы" width="370" height="294">
+            <p class="work-img-descriprion-overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+           </div>
           <div class="img-wrap">
           <h2 class="work-name">Ресторан <span lang="en">Seafood</span></h2>
           <p class="work-descriptions">Приложение</p>
@@ -73,7 +82,10 @@
 
         <li class="work-img">
           <a href="" class="link work-img-link">
-          <img src="./img/our-works/prime-project-min.png" alt="Изображение выполенной работы" width="370" height="294">
+          <div class="work-img-wrapper">
+            <img src="./img/our-works/prime-project-min.png" alt="Изображение выполенной работы" width="370" height="294">
+            <p class="work-img-descriprion-overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+          </div>
           <div class="img-wrap">
             <h2 class="work-name">Проект <span lang="en">Prime</span></h2>
             <p class="work-descriptions">Маркетинг</p>
@@ -83,7 +95,10 @@
 
         <li class="work-img">
           <a href="" class="work-img-link link">
-          <img src="./img/our-works/boxes-project-min.png" alt="Изображение выполенной работы" width="370" height="294">
+            <div class="work-img-wrapper">
+              <img src="./img/our-works/boxes-project-min.png" alt="Изображение выполенной работы" width="370" height="294">
+              <p class="work-img-descriprion-overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+            </div>
           <div class="img-wrap">
             <h2 class="work-name">Проект <span lang="en">Boxes</span></h2>
             <p class="work-descriptions">Приложение</p>
@@ -93,7 +108,10 @@
 
         <li class="work-img">
           <a href="" class="work-img-link link">
-          <img src="./img/our-works/insipration-min.png" alt="Изображение выполенной работы" width="370" height="294">
+            <div class="work-img-wrapper">
+              <img src="./img/our-works/insipration-min.png" alt="Изображение выполенной работы" width="370" height="294">
+              <p class="work-img-descriprion-overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+            </div>
           <div class="img-wrap">
             <h2 class="work-name" lang="en">Inspiration has no Borders</h2>
             <p class="work-descriptions">Веб-сайт</p>
@@ -103,7 +121,10 @@
 
         <li class="work-img">
           <a href="" class="work-img-link link">
-          <img src="./img/our-works/limited-edit-min.png" alt="Изображение выполенной работы" width="370" height="294">
+            <div class="work-img-wrapper">
+              <img src="./img/our-works/limited-edit-min.png" alt="Изображение выполенной работы" width="370" height="294">
+              <p class="work-img-descriprion-overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+            </div>
           <div class="img-wrap">
             <h2 class="work-name">Издание <span lang="en">Limited Edition</span></h2>
             <p class="work-descriptions">Дизайн</p>
@@ -113,7 +134,10 @@
 
         <li class="work-img">
           <a href="" class="work-img-link link">
-          <img src="./img/our-works/lab-min.png" alt="Изображение выполенной работы" width="370" height="294">
+            <div class="work-img-wrapper">
+              <img src="./img/our-works/lab-min.png" alt="Изображение выполенной работы" width="370" height="294">
+              <p class="work-img-descriprion-overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>   
+            </div>
           <div class="img-wrap">
             <h2 class="work-name">Проект <span lang="en">LAB</span></h2>
             <p class="work-descriptions">Маркетинг</p>
@@ -123,7 +147,10 @@
 
         <li class="work-img">
           <a href="" class="work-img-link link">
-          <img src="./img/our-works/grow-biz-min.png" alt="Изображение выполенной работы" width="370" height="294">
+            <div class="work-img-wrapper">
+              <img src="./img/our-works/grow-biz-min.png" alt="Изображение выполенной работы" width="370" height="294">
+              <p class="work-img-descriprion-overlay">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+            </div>
           <div class="img-wrap">
             <h2 class="work-name" lang="en">Growing Business</h2>
             <p class="work-descriptions">Приложение</p>
